# termux-app

./: .gitignore  CLAUDE.md  LICENSE.md  README.md
.claude/skills/: phone.md
.github/workflows/: trigger_library_builds_on_jitpack.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/termux/app/: CodefactoryWebViewActivity.java  (+2 more)
app/src/main/res/drawable/: ic_dashboard.xml  ic_floor_build.xml  ic_floor_default.xml  ic_floor_general.xml  ic_floor_git.xml  ic_floor_server.xml  pf_button_primary.xml  pf_button_secondary.xml  pf_divider.xml  pf_drawer_background.xml  pf_floor_item_background.xml  pf_session_item_background.xml  pf_settings_item_background.xml  pf_status_error.xml  pf_status_running.xml  pf_status_stopped.xml  pf_tab_indicator.xml
app/src/main/res/layout/: activity_codefactory_webview.xml  activity_termux.xml  item_floor_list.xml  item_terminal_sessions_list.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
native/codefactory/: Cargo.toml
native/codefactory/src/: atlas.rs  colors.rs  grid.rs  grid_convert.rs  input.rs  lib.rs  pipeline.rs  renderer.rs  surface.rs
native/codefactory/src/shaders/: background.wgsl  glyph.wgsl
scripts/: build-codefactory-android.sh  claude-fast  cross-env.sh  deploy.sh  dispatch-worker.sh  env-preload.js  post-bootstrap-setup.sh  worker-prompt.sh
termux-shared/: build.gradle
termux-shared/src/main/cpp/: Android.mk
termux-shared/src/main/res/values/: strings.xml
(+16 files in other folders)
